# youtube_backend_tools_fastapi

./: .gitignore  README.md  cookies.txt  docs.py  pyproject.toml  requirements.txt  run.sh  start.sh
deploy/nginx/: yt_api.conf
src/: main.py
src/models/: __init__.py  base.py
src/routers/: __init__.py  youtube.py
src/services/: youtube_service.py
