[project]
name = "youtube-tools-backend"
version = "0.1.0"
description = "Professional YouTube Tags & Video Downloader API built with FastAPI"
authors = [{ name = "Premiumisme", email = "your@email.com" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "yt-dlp>=2025.4.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.9.0",
]
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "pytest>=8.3.0",
    "httpx>=0.27.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E", "F", "I", "W",      # default rules
    "B", "C4", "UP", "SIM",  # extra good rules
    "ANN", "ARG", "PL", "RUF", "S", "T20"
]
ignore = ["ANN401"]   # allow Any in some cases
fixable = ["ALL"]

[tool.ruff.lint]
isort = { known-first-party = ["app"] }

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict = true
strict_optional = true

[tool.pyright]
typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.uv]
dev-dependencies = ["ruff", "mypy", "pre-commit"]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"